# dailyincrease

./: .gitignore  README.md  autofilldate.py  dailyincrease.py  downloadexcel.py  excellist.py  inputdate.py  pyproject.toml  scripts.py
