[tool.poetry]
name = "dailyincrease"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
numpy = "^1.19.2"
requests = "^2.24.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
vscode = "scripts:vscode"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
